--- a/i18n/po/be/cnf_rs.po
+++ b/i18n/po/be/cnf_rs.po
@@ -1,20 +1,23 @@
-# Afrikaans translations for cnf-rs package.
-# Copyright (C) 2007 SuSE Linux Products GmbH, Nuernberg
+# Belarusian translations for cnf-rs package.
+# Copyright (C) 2007 SUSE Linux Products GmbH.
 # Copyright (C) 2023 openSUSE project
 # This file is distributed under the same license as the cnf-rs package.
+# Alexander Nyakhaychyk <nyakhaychyk@gmail.com>, 2007
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: cnf-rs 0.3.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-10-05 12:05+0200\n"
-"PO-Revision-Date: 2006-11-03 14:26\n"
-"Last-Translator: Novell Language <language@novell.com>\n"
-"Language-Team: Novell Language <language@novell.com>\n"
-"Language: af\n"
+"PO-Revision-Date: 2006-01-04 08:58+0100\n"
+"Last-Translator: Alexander Nyakhaychyk <nyakhaychyk@gmail.com>\n"
+"Language-Team: Belarusian <i18n@suse.de>\n"
+"Language: be\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
+"n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #: src/main.rs:37
 msgid ""
@@ -30,7 +33,7 @@ msgstr ""
 
 #: src/main.rs:63
 msgid "command not found"
-msgstr "Inskywing nie gevind nie."
+msgstr "    <каманда> [опцыі]"
 
 #: src/main.rs:69
 msgid "<selected_package>"
@@ -41,6 +44,7 @@ msgid "The program '{}' can be found in the following package:"
 msgid_plural "The program '{}' can be found in following packages:"
 msgstr[0] ""
 msgstr[1] ""
+msgstr[2] ""
 
 #: src/main.rs:86
 msgid "  * {} [ path: {}/{}, repository: {} ]"
@@ -51,5 +55,3 @@ msgid ""
 "Try installing with:\n"
 "   "
 msgstr ""
-"Installeer van %s\n"
-"   "
