--- a/i18n/po/eo/cnf_rs.po
+++ b/i18n/po/eo/cnf_rs.po
@@ -6,11 +6,9 @@
 # Efstathios Iosifidis <iosifidis@opensuse.org>, 2011, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: cnf-rs 0.3.0\n"
-"Report-Msgid-Bugs-To: \n"
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-05 12:05+0200\n"
+"POT-Creation-Date: 2023-06-23 14:34+0000\n"
 "PO-Revision-Date: 2012-02-17 23:43+0200\n"
 "Last-Translator: Efstathios Iosifidis <iosifidis@opensuse.org>\n"
 "Language-Team: Ελληνικά, Σύγχρονα <opensuse-translation-el@opensuse.org>\n"
@@ -26,17 +24,16 @@ msgid ""
 "Absolute path to '{}' is '{}'. Please check your $PATH variable to see "
 "whether it contains the mentioned path."
 msgstr ""
-"Η απόλυτη διαδρομή στο '{}' είναι '{}'. Παρακαλώ "
-"ελέγξτε τη μεταβλητή $PATH για να δείτε εάν περιέχει τη διαδρομή που "
-"αναφέρθηκε."
+"Η απόλυτη διαδρομή στο '{}' είναι '{}'. Παρακαλώ ελέγξτε τη μεταβλητή $PATH "
+"για να δείτε εάν περιέχει τη διαδρομή που αναφέρθηκε."
 
 #: src/main.rs:43
 msgid ""
 "Absolute path to '{}' is '{}', so running it may require superuser "
 "privileges (eg. root)."
 msgstr ""
-"Η απόλυτη διαδρομή στο '{}' είναι '{}', έτσι εάν το "
-"εκτελέσετε μπορεί να χρειαστούν δικαιώματα υπερχρήστη (π.χ. root)."
+"Η απόλυτη διαδρομή στο '{}' είναι '{}', έτσι εάν το εκτελέσετε μπορεί να "
+"χρειαστούν δικαιώματα υπερχρήστη (π.χ. root)."
 
 #: src/main.rs:63
 msgid "command not found"
