--- a/i18n/po/lt/cnf_rs.po
+++ b/i18n/po/lt/cnf_rs.po
@@ -8,16 +8,18 @@ msgid ""
 msgstr ""
 "Project-Id-Version: cnf-rs 0.3.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-19 19:32+0000\n"
-"PO-Revision-Date: 2023-06-19 21:33+0200\n"
-"Last-Translator: michal <michal@cnf-rs.localhost.localdomain>\n"
-"Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
+"POT-Creation-Date: 2018-10-05 12:05+0200\n"
+"PO-Revision-Date: 2017-06-02 18:12+0000\n"
+"Last-Translator: Mindaugas Baranauskas <opensuse.lietuviu.kalba@gmail.com>\n"
+"Language-Team: Lithuanian <https://l10n.opensuse.org/projects/scout/command-"
+"not-found-master/lt/>\n"
 "Language: lt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
-"(n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=4; plural=(n==1 ? 0 : n%10>=2 && (n%100<10 || n"
+"%100>=20) ? 1 : n%10==0 || (n%100>10 && n%100<20) ? 2 : 3);\n"
+"X-Generator: Weblate 2.6\n"
 
 #: src/main.rs:37
 msgid ""
